# tryon-service

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: app.yaml  logging.yaml  models.yaml  person_detection.yaml  queue.yaml  storage.yaml  validation.yaml
deployment/colab/: README.md  download_models.py  requirements-colab.txt  run_colab.py  setup_colab.py
scripts/: export_yolo_to_onnx.py  install_cpu.ps1  install_gpu.ps1  load_automasker.py  load_pipeline.py  test_automasker.py  test_person_provider.py  test_virtual_tryon.py
tests/: test.py  test_api_validation.py  test_automask_service.py  test_catvton_import.py  test_exceptions.py  test_garment_model.py  test_image_model.py  test_logger.py  test_result.py  test_upload_schema.py  test_validation_engine.py  test_virtual_tryon_service.py
tryon_service/: main.py
tryon_service/adapters/mappers/: tryon_request_mapper.py  upload_mapper.py
tryon_service/api/: main.py  router.py
tryon_service/api/exceptions/: handlers.py  schemas.py
tryon_service/bootstrap/: catvton_environment.py
tryon_service/config/: base.py  loader.py  settings.py  tryon.py
tryon_service/container/: container.py
tryon_service/core/: container.py  exceptions.py  lifespan.py  logger.py  result.py
tryon_service/interfaces/: storage.py
tryon_service/logging/: logger.py
tryon_service/models/: garment.py  image.py
tryon_service/providers/: local_storage.py
tryon_service/repositories/: image_repository.py
tryon_service/schemas/: upload.py
tryon_service/services/: storage_service.py
(+93 files in other folders)
