[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "tryon-service"
version = "0.1.0"
description = "Production-grade AI Virtual Try-On Microservice"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Bola Adel" }
]

dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "PyYAML>=6.0.2",
    "loguru>=0.7.3",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "pymongo>=4.13.2",
    "mediapipe>=0.10.21",
    "torch==2.4.0",
    "torchvision==0.19.0",
    "accelerate==0.31.0",
    "transformers==4.46.3",
    "numpy==1.26.4",
    "opencv-python==4.10.0.84",
    "Pillow==10.3.0",
    "scipy==1.13.1",
    "scikit-image==0.24.0",
    "tqdm==4.66.4",
    "fvcore==0.1.5.post20221221",
    "cloudpickle==3.0.0",
    "omegaconf==2.3.0",
    "pycocotools==2.0.8",
    "av==12.3.0",
    "peft>=0.17.0",
    "huggingface_hub>=0.34.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.7",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["tryon_service"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10.11"
strict = true